--- a/css/main_styles.css
+++ b/css/main_styles.css
@@ -58,6 +58,10 @@
     border-radius: 60px;
     flex: 0 0 25%;
     padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 25px;
 }
 
 #serv_pic{
@@ -84,4 +88,176 @@
 
 #serv_h{
     margin-bottom: 10px;
+}
+
+#gallery{
+    margin-top: 65px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+    row-gap: 45px;
+    margin-bottom: 120px;
+}
+
+#gallery_cat{
+    width: 202px;
+    height: 233px;
+    border-radius: 20px;
+}
+
+.gal_pic_1{
+    position: relative;
+        width: 202px;
+    height: 233px;
+}
+
+.gal_pic_2{
+    position: relative;
+        width: 202px;
+    height: 233px;
+}
+
+.gal_pic_3{
+    position: relative;
+        width: 202px;
+    height: 233px;
+}
+
+.gal_pic_4{
+    position: relative;
+        width: 202px;
+    height: 233px;
+}
+
+.gal_pic_5{
+    position: relative;
+        width: 202px;
+    height: 233px;
+}
+
+.gal_pic_6{
+    position: relative;
+        width: 202px;
+    height: 233px;
+}
+
+
+#price_usual{
+    background-color: #fff;
+    border-radius: 40px;
+    padding: 50px;
+    color: #232323;
+    height: 577px;
+    width: 440px;
+    flex: 0 0 auto;
+}
+
+#price_tab{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+}
+
+#price_special{
+    width: 444px;
+    height: 644px;
+    border-radius: 40px;
+    background-color: #C75E90;
+    flex: 0 0 auto;
+    color: #fff;
+    padding: 50px 40px 40px 40px;
+}
+#pricing{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 100px;
+}
+
+#com_block{
+    width: 424px;
+    height: 453px;
+    padding: 40px 50px 40px 50px;
+    background-color: #fff;
+    font-size: 14px;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items:flex-start;
+}
+
+#com_pic{
+    width: 68px;
+    height: 68px;
+    border-radius: 999px;
+    border: 4px solid #C75E90;
+}
+
+#client_block
+{
+    display: flex;
+    gap: 18px;
+}
+
+#feedback_comments {
+    display: flex;
+    gap: 20px;
+    justify-content: center;  
+}
+
+#feedback{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 22px;
+}
+
+#npep{
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    justify-content: center;
+}
+
+#np{
+    width: 100%;
+}
+#ep{
+    width: 100%;
+}
+
+#form_text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form{
+    width: 1312px;
+    background-color: #fff;
+    border-radius: 60px;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+
+}
+
+#forms{
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+#information{
+    width: 100%;
+    margin-top: 50px;
+
 }
